# esp32-projects

./: .gitignore  AGENT_SKILL_GUIDE.md  MCP_SERVER.md  README.md  README_ESP32_SETUP.md  cpu_monitor.py  esp32_mcp_server.py  happy_show.py  play_game.sh  sad_show.py  setup_esp32.sh
.github/agents/: esp32.agent.md
.github/skills/esp32-control/: SKILL.md
.github/skills/esp32-control/references/: PROTOCOL.md
.github/skills/esp32-control/scripts/: esp32_cmd.py
bt_echo/: CMakeLists.txt  bt_client.py  sdkconfig.defaults
bt_echo/main/: CMakeLists.txt  main.c
wifi_echo/: CMakeLists.txt  PROTOCOL.md  README.md  build_flash.sh  monitor.sh  run.sh  sdkconfig.defaults  setup_dual_network.sh  stop.sh  wifi_client.py
wifi_echo/components/buzzer/: CMakeLists.txt  buzzer.c
wifi_echo/components/buzzer/include/: buzzer.h
wifi_echo/components/cmd_handler/: CMakeLists.txt  cmd_buzzer.c  cmd_display.c  cmd_handler.c  cmd_lcd.c  cmd_servo.c
wifi_echo/components/grove_lcd/: CMakeLists.txt  grove_lcd.c
wifi_echo/components/servo/: README.md  servo.c
wifi_echo/components/servo/include/: servo.h
wifi_echo/components/tm1637/: CMakeLists.txt  README.md  tm1637.c
wifi_echo/main/: CMakeLists.txt  main.c
wifi_echo_micro_ros/: CMakeLists.txt  README.md  esp32_ctrl.py  esp32_ros_mcp_server.py  sdkconfig.defaults  stress_test.sh
wifi_echo_micro_ros/components/buzzer/: README.md  buzzer.c
wifi_echo_micro_ros/components/servo/: CMakeLists.txt
wifi_echo_micro_ros/components/tm1637/: CMakeLists.txt
wifi_echo_micro_ros/main/: CMakeLists.txt  Kconfig.projbuild  main.c
(+6 files in other folders)
